--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ table {
 	border-spacing: 0;
 }
 #banner{
-    background: url(../img/banner-bg.jpg) no-repeat center top;
+    background: url(../img/11.jpg) no-repeat center top;
     background-size: cover;
     min-height: 630px;
 }
@@ -38,15 +38,32 @@ table {
     background-color: RGBA(0, 0, 0, 0.61);
     min-height: 630px;
 }
-#banner h2{
+#banner h3{
     font-family: 'Satisfy', sans-serif;
-    font-size: 45px;
-    color: #FFB03B;
+    font-size: 40px;
+    color: #ff3333;
 }
-#banner p{
-    font-family: 'PT Sans', sans-serif;
-    color: #fcfcfc;
-    font-size: 34px;
+.header-h {
+    color: #FFB03B;
+    font-size: 46px;
+    font-family: 'Satisfy', sans-serif;
+    font-weight: 300;
+}
+p{
+    font-family: 'Satisfy', sans-serif;
+    font-size: 25px;
+    color: #ff3333;;
+}
+.header-p{
+    font-family: 'Satisfy', sans-serif;
+    font-size: 25px;
+    color: #ff3333;;
+}
+.light-blue, .contacts-sp{
+	font-family: 'Georgia', sans-serif;
+    color: #9699a6;
+    font-size: 16px;
+    margin-bottom: 1px;;
 }
 .section-padding{
     padding: 60px 0px;
@@ -99,16 +116,7 @@ table {
     cursor: pointer;
 }
 
-.header-h {
-    color: #FFB03B;
-    font-size: 46px;
-    font-family: 'Satisfy', sans-serif;
-    font-weight: 300;
-}
-.header-p {
-    color: #9699a6;
-    font-size: 16px;
-}
+
 .msg-row {
     margin-top: 56px;
 }
@@ -145,11 +153,7 @@ table {
     font-size: 24px;
     margin-top: 0;
 }
-.light-blue {
-    color: #9699a6;
-    font-size: 16px;
-    margin-bottom: 1px;
-}
+
 .media-body {
     margin-left: 10px;
     padding-left: 13px;
@@ -267,27 +271,27 @@ table {
     color: #ffb03b;
 }
 #msm{
-    background: url('../img/res02.jpg') no-repeat;
+    background: url('../img/3.jpg') no-repeat;
     background-size: cover;
 }
 #ec{
-    background: url('../img/res02.jpg') no-repeat;
+    background: url('../img/10.jpg') no-repeat;
     background-size: cover;
 }
 #mkr{
-    background: url('../img/res02.jpg') no-repeat;
+    background: url('../img/5.jpg') no-repeat;
     background-size: cover;
 }
 #haldi{
-    background: url('../img/res02.jpg') no-repeat;
+    background: url('../img/4.jpg') no-repeat;
     background-size: cover;
 }
 #tbd{
-    background: url('../img/res02.jpg') no-repeat;
+    background: url('../img/8.jpg') no-repeat;
     background-size: cover;
 }
 #ty{
-    background: url('../img/res02.jpg') no-repeat;
+    background: url('../img/6.jpg') no-repeat;
     background-size: cover;
 }
 .left-images img {
@@ -472,12 +476,6 @@ table {
     .details-text {
         border:0px;
         border-bottom: 2px solid #A87F41;
-    }
-    .header-h {
-        font-size: 35px;
-    }
-    .header-p, body{
-        font-size: 14px;
     }
     .about-info, .mr-15{
         margin-bottom: 15px;
